# python_packaging

./: 00 - Introduction.ipynb  01 - Testing your code.ipynb  02 - From modules to packages.ipynb  05 - Further Reading.ipynb  README.md  requirements.txt
notebooks/: 00 - From scripts to modules.ipynb  00 - Scripts, modules, packages.ipynb  00 - scripts modules packages.ipynb  00_scripts_modules_packages.ipynb  01 - Testing your code.ipynb  02 - From modules to packages.ipynb  03 - Continuous Integration & Deployment.ipynb  03 - Continuous Integration.ipynb  04 - Continuous Deployment and Versioning.ipynb  04 - Releasing and versioning your code.ipynb  05 - FAQs.ipynb  06 - TLDR.ipynb  mod.py  script.py
notebooks/01-walrus-package/: README.md  setup.cfg
notebooks/01-walrus-package/src/walrus/: math.py
notebooks/01-walrus-package/test/: test_math.py
notebooks/02-walrus-package/: MANIFEST.in  setup.cfg
notebooks/03-walrus-package/: setup.cfg
notebooks/03-walrus-package/src/walrus/: greet.py  movies.py
notebooks/03-walrus-package/test/: test_basic.py  test_movie.py
notebooks/04-walrus-package/: README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg
notebooks/04-walrus-package/.github/workflows/: main-simple.yml  main.yml  release.yml
notebooks/04-walrus-package/src/walrus/: __init__.py  _version.py
notebooks/04-walrus-package/test/: test_data.py
notebooks/datascience/: __init__.py  __main__.py
notebooks/datascience/analysis/: regression.py
notebooks/datascience/preprocess/: __init__.py  filter.py  transform.py
(+1 files in other folders)
