[metadata]
name = edu-princeton-vineetb-walrus 
version = 0.1.0
author = Vineet Bansal
author_email = vineetb@princeton.edu
description = "A great package"
long_description = file: README.md
url = https://github.com/vineetbansal/walrus.git

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
