[metadata]
name = vineetb-walrus 
version = 0.1.0
author = Vineet Bansal
author_email = vineetb@princeton.edu
description = "A great package"
long_description = file: README.md
url = https://github.com/vineetbansal/walrus.git

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pandas

[options.extras_require]
dev = mock; numpydoc; pytest; sphinx; sphinxcontrib-bibtex<2.0.0; sphinx-rtd-theme

[options.packages.find]
where = src
